fix: use collect(toList()) instead of toList()